--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,7 @@
       <div class="mt-4">
         <div class="d-flex justify-content-center links">
           Don't have an account?
-          <a class="signup">Sign Up</a>
+          <a routerLink="/register" class="signup">Sign Up</a>
         </div>
       </div>
 
