--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,6 @@ td {
   cursor: inherit;
   display: block;
 }
+.breadcrumb {
+  background-color: #f8f9fa; /* Use the previous background color value */
+}
